<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">homework7db</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="a">employees who like tetris</string>
    <string name="b">employees who like pacman and are females</string>
    <string name="c">employees who were hired after year 2000</string>
    <string name="d">employees who second favorite game is mortal kombat</string>
    <string name="e">employees ordered by color</string>

</resources>
